--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "chess.js",
-  "version": "0.10.2",
-  "description": "A Javascript chess library for chess move generation/validation, piece placement/movement, and check/checkmate/draw detection",
-  "author": "Jeff Hlywa <jhlywa@gmail.com> (https://github.com/jhlywa)",
+  "name": "crazyhouse.js",
+  "version": "0.0.1",
+  "description": "A Javascript library for crazyhouse with 960 support, based on the chess.js library.",
+  "author": "Joseph Ksiazek <jak3122@rit.edu> (https://github.com/jak3122)",
   "license": "BSD-2-Clause",
-  "homepage": "https://github.com/jhlywa/chess.js",
+  "homepage": "https://github.com/jak3122/crazyhouse.js",
   "keywords": [
-    "chess"
+    "chess",
+    "crazyhouse"
   ],
-  "main": "chess.js",
-  "filename": "chess.min.js",
+  "main": "crazyhouse.js",
+  "filename": "crazyhouse.min.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jhlywa/chess.js.git"
+    "url": "https://github.com/jak3122/crazyhouse.js.git"
   },
-  "npmName": "chess.js",
+  "npmName": "crazyhouse.js",
   "npmFileMap": [
     {
       "basePath": "",
       "files": [
-        "chess*.js"
+        "crazyhouse.js"
       ]
     }
   ],
   "devDependencies": {
-    "mocha": "2.2.4",
-    "chai": "2.3.0",
+    "mocha": "3.2.0",
+    "chai": "3.5.0",
     "uglify-js": "2.4.21"
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha",
-    "minify": "./node_modules/.bin/uglifyjs chess.js -c -m --comments 'license' > chess.min.js"
+    "minify": "./node_modules/.bin/uglifyjs crazyhouse.js -c -m --comments 'license' > crazyhouse.min.js"
   }
 }
